# LinkSphere

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  package-lock.json  package.json  presentation.md
.github/workflows/: backend-ci.yml  code_indent_check.yml  frontend-ci.yml  frontend_checks.yml  health-check.yml  ping-backend1.yml  ping-backend2.yml  ping-backend3.yml  ping-frontend.yml  ping-frontend1.yml  ping-frontend2.yml  ping-render.yml  pr-comment.yaml  pr-description-close.yaml  pr-description-lint.yaml  pr-title-close.yaml  pr-title-lint.yaml  render-deploy.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.service1  Dockerfile.service2  Dockerfile.service3
backend/.sqlx/: query-22a02075ad1c81bf24d1ab21523cebcf67e402dd870e48f63b4cbbf670b604f3.json  query-22f8cab19e8ce8be3a0c60a56241a2d4ed2ddafe6790309dc0a4eacf2569d710.json  query-331e8379848ed523f02d7bacc2938f13a6d07758ebab75c6dc417c134005b730.json  query-3d9ebece45912d0199ed94339820e2d10c5f5782506f6c657b5f1277ad885e7e.json  query-54c9424b27d9a817a1ab9496618bae162437bca4e6548c8dad720f7b21b683bc.json  query-5f6e61e66b52640ed3c28e05f0035160e5c97f4d5ffb51acc2315303891e0be6.json  query-648a8b853f464c6c587b98caf12dd692b88c6d129282897ad896d7b7cd3b8106.json  query-68a55a6382828ec882f65c497fb02dd884db83fe44beced3fe3ca5a6f0c96ca9.json  query-6fb25d1ddaf16de0e87ba591bba53f6850cd8f382ed54c2884f32e907809823e.json  query-818622d4d4b01549109cc92e93f7df100ded5dac448e46e362a8220ec6661b9f.json  query-a22112917fb062fa6fa0eebab231731711d3f632a0c5ee4ecc29c08c84999a5f.json  query-a5c38712f43a1193eb810d8635819fbd044cb70eef6245928d6d0ebd342b5a0e.json  query-b040aaaec10552a163f46d9d12d690681da71fe7e557b762b6d039e93d90f059.json  query-d5fcbbb502138662f670111479633938368ca7a29212cf4f72567efc4cd81a85.json  query-da3d249b027d35ebae5f42d5f216a4bba661d489b447f0732c48438ffbd42655.json  query-df5c57907d0f7035eb43c353ecfcffed2cce0167a4fdff446f7a4961d824b41f.json  query-f8fc3f2c9f137a53e20ec204b31afa31b85dbdd91fec9306e0f63da6ad49e19c.json  query-fd9c2c5247366760ba028edd919d0420b68eb17b32d70ad15bd467fc89638d1f.json
backend/migrations/: 20240315223100_update_schema.down.sql  20240315223100_update_schema.sql  20240320000000_add_pending_verification_status.sql  20240320000001_update_users_to_pending_verification.sql  20240716103000_add_refresh_tokens_table.sql  20250609202421_clean_schema.down.sql  20250609202421_clean_schema.sql
backend/src/: error.rs  lib.rs  logging.rs  main.rs
backend/src/api/: mod.rs  models.rs  utils.rs
backend/src/api/docs/: auth.rs  health.rs  links.rs  mod.rs
backend/src/auth/: email.rs  middleware.rs  mod.rs  models.rs  routes.rs  service.rs  validation.rs
backend/src/auth/middleware/: mod.rs
backend/src/auth/routes/: mod.rs
backend/src/cli/: main.rs
backend/src/database/: db.rs  mod.rs  models.rs  queries.rs  schema.rs  state.rs
backend/src/handlers/: auth.rs
backend/src/middleware/: auth.rs  mod.rs  request_logger.rs
backend/src/models/: auth.rs  link.rs  user.rs
backend/src/routes/: auth.rs  delete.rs  get_link.rs  health.rs  links.rs  mod.rs  root.rs  search.rs  uploads.rs  users.rs
backend/src/services/: auth.rs  email.rs  link_preview.rs  mod.rs
gateway/: pom.xml
keycloak-setup/: Dockerfile
my-link-uploader/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
my-link-uploader/public/: index.html  manifest.json
my-link-uploader/src/: App.js  App.tsx  ViewLinksDemo.tsx  index.css  main.tsx
my-link-uploader/src/components/: AdminDashboard.tsx  ConfirmationModal.tsx  DashboardLayout.tsx  Footer.tsx  Header.tsx  HomePage.css  HomePage.tsx  Layout.tsx  LinkCard.css  LinkCard.tsx  LinksList.tsx  Navbar.js  Navbar.tsx  Navigation.tsx  ProfileDropdown.tsx  ProtectedRoute.tsx  Sidebar.tsx  SortFilterControls.tsx  SuccessModal.tsx  UploadForm.css  UploadForm.tsx  pagination.tsx
(+34 files in other folders)
